--- a/po/de.po
+++ b/po/de.po
@@ -4,13 +4,14 @@
 #
 # Christian Stimming <stimming@tuhh.de>, 2007.
 # Frederik Schwarzer <schwarzerf@gmail.com>, 2008.
+# Florian Schüller <florian.schueller@gmail.com>, 2017.
 msgid ""
 msgstr ""
 "Project-Id-Version: git-gui\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-01-02 10:08+0100\n"
 "PO-Revision-Date: 2015-10-20 14:20+0200\n"
-"Last-Translator: Christian Stimming <stimming@tuhh.de>\n"
+"Last-Translator: Florian Schüller <florian.schueller@gmail.com>\n"
 "Language-Team: German\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
